--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "schedule": "0.4.0",
+    "scheduler": "^0.13.3",
     "webpack": "^4.29.6",
     "webpack-bundle-tracker": "^0.4.2-beta"
   },
