--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,12 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
+  - yarn install
 script:
+  - "python manage.py makemigrations --noinput --settings=ReactDjango.settings"
+  - "python manage.py migrate --noinput --settings=ReactDjango.settings"
   - python manage.py test
+  - ./node_modules/.bin/webpack --config webpack.config.js
+  - "python manage.py collectstatic --noinput --settings=ReactDjango.settings"
+after_success:
+  - coveralls
