--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
+sudo: required
+dist: xenial
 python:
   - "3.6"
-  - "3.7.2"
+  - "3.7"
 install:
   - pip install -r requirements.txt
   - yarn install
