--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-coverage==4.5.2
+certifi==2018.11.29
+chardet==3.0.4
+coverage==4.0.3
 Django==2.1.7
 django-webpack-loader==0.6.0
+idna==2.8
+python-coveralls==2.9.1
 pytz==2018.9
+PyYAML==3.13
+requests==2.21.0
+six==1.12.0
+urllib3==1.24.1
