--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-webpack-loader==0.6.0
 idna==2.8
 python-coveralls==2.9.1
 pytz==2018.9
+PyYAML==3.13
 requests==2.21.0
 six==1.12.0
-urllib3==1.24.1
+urllib3==1.24.2
